--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,2 +1,70 @@
 @import "../node_modules/mockingbird-sass/scss/mockingbird";
 @import "../node_modules/mockingbird-sass/scss/config/variables";
+
+$primary: #5c5ce6;
+$light: #f5f5fa;
+$border: #e6e6eb;
+$dark: #000;
+
+main {
+  display: flex;
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+}
+
+.page-editor {
+  background: $light;
+  display: flex;
+  flex-direction: column;
+
+  .editor-head {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 1em 2em;
+    border-bottom: 1px solid $border;
+
+    .icon-link {
+      margin-left: 1em;
+    }
+
+    .link-back {
+      margin-right: auto;
+      margin-left: 0;
+    }
+  }
+
+  .text-editor {
+    background: transparent;
+    border-radius: 0;
+    border: none;
+    outline: none;
+    box-shadow: none;
+
+    height: 100%;
+    padding: 2em;
+    overflow-y: auto;
+  }
+}
+
+.page-content {
+  padding: 2em;
+}
+
+.icon-link {
+  line-height: 1;
+  color: rgba($dark, .75);
+  transition: .2s;
+
+  &:hover,
+  &:focus {
+    color: $dark;
+  }
+
+  i {
+    font-size: 2em;
+  }
+}
