--- a/assets/style.scss
+++ b/assets/style.scss
@@ -51,6 +51,8 @@ section {
 }
 
 .page-content {
+  height: 100vh;
+  overflow-y: auto;
   padding: 2em;
 }
 
@@ -66,5 +68,11 @@ section {
 
   i {
     font-size: 2em;
+  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  &:first-child {
+    margin-top: 0;
   }
 }
