--- a/assets/style.scss
+++ b/assets/style.scss
@@ -219,6 +219,8 @@ h1, h2, h3, h4, h5, h6 {
 	justify-content: center;
 	padding: 0 1em;
 
+	z-index: 10;
+
 	.modal-bg {
 		background: rgba($dark, .5);
 		position: absolute;
