--- a/assets/style.scss
+++ b/assets/style.scss
@@ -310,6 +310,11 @@ h1, h2, h3, h4, h5, h6 {
 			line-height: 1;
 			display: inline;
 			margin-left: .5em;
+
+			&.icon-left {
+				margin-left: 0;
+				margin-right: .5em;
+			}
 		}
 	}
 }
