--- a/assets/style.scss
+++ b/assets/style.scss
@@ -151,6 +151,13 @@ section {
   height: 100vh;
   overflow-y: auto;
   padding: 2em;
+
+	.back-link {
+		display: inline-flex;
+		align-items: center;
+		text-decoration: none;
+		margin-bottom: 1em;
+	}
 }
 
 .page-menu {
