--- a/assets/style.scss
+++ b/assets/style.scss
@@ -144,6 +144,13 @@ section {
 			left: 2rem;
 		}
 	}
+
+	.empty-state {
+		font-size: 1.125em;
+		font-weight: 500;
+		text-align: center;
+		padding: 1rem 2rem;
+	}
 }
 
 .page-content {
