--- a/assets/style.scss
+++ b/assets/style.scss
@@ -12,8 +12,8 @@ $shadow12dp: 0 .5em 1.5em .125em rgba($dark, .15), 0 .25em .375em rgba($dark, .2
 $shadow24dp: 0 1em 1.5em .25em rgba($dark, .15), 0 .5em .75em rgba($dark, .2);
 
 html, body {
-	overflow: hidden;
-	letter-spacing: .02em;
+  overflow: hidden;
+  letter-spacing: .02em;
 }
 
 main {
@@ -30,25 +30,25 @@ section {
   display: flex;
   flex-direction: column;
 
-	header {
-		display: flex;
-		align-items: center;
-		justify-content: flex-end;
-		padding: 1em 2rem;
-		border-bottom: 1px solid $border;
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 1em 2rem;
+    border-bottom: 1px solid $border;
 
-		.icon-link {
-			margin-left: 1em;
-		}
+    .icon-link {
+      margin-left: 1em;
+    }
 
-		.link-back {
-			margin-right: auto;
-			margin-left: 0;
-		}
-	}
+    .link-back {
+      margin-right: auto;
+      margin-left: 0;
+    }
+  }
 
   .text-editor {
-		font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto Mono', monospace;
     background: transparent;
     border-radius: 0;
     border: none;
@@ -58,7 +58,7 @@ section {
     height: 100%;
     padding: 2em 2rem;
     overflow-y: auto;
-		resize: none;
+    resize: none;
   }
 }
 
@@ -66,78 +66,78 @@ section {
   background: $light;
   display: flex;
   flex-direction: column;
-	max-width: 360px;
+  max-width: 360px;
 
-	footer {
-		margin-top: auto;
-		display: flex;
-		align-items: center;
-		padding: 1em 2rem;
-		border-top: 1px solid $border;
+  footer {
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    padding: 1em 2rem;
+    border-top: 1px solid $border;
 
-		.icon-right {
-			margin-left: auto;
-		}
-	}
+    .icon-right {
+      margin-left: auto;
+    }
+  }
 
-	.file-tree {
-		padding-top: 1em;
-	}
+  .file-tree {
+    padding-top: 1em;
+  }
 
-	.file-item {
-		position: relative;
-		display: block;
-		padding: 1em 2rem;
-		font-weight: bold;
-		color: rgba($dark, .75);
-	  transition: .2s;
+  .file-item {
+    position: relative;
+    display: block;
+    padding: 1em 2rem;
+    font-weight: bold;
+    color: rgba($dark, .75);
+    transition: .2s;
 
-		p {
-			white-space: nowrap;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			max-width: 100%;
-			margin: 0;
-		}
+    p {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      max-width: 100%;
+      margin: 0;
+    }
 
-		.material-icons {
-			position: absolute;
-			font-size: 2em;
-			top: 50%;
-			right: 1rem;
-			transform: translateY(-50%);
-			visibility: hidden;
-		}
+    .material-icons {
+      position: absolute;
+      font-size: 2em;
+      top: 50%;
+      right: 1rem;
+      transform: translateY(-50%);
+      visibility: hidden;
+    }
 
-		&.active {
-			background: $primary;
-			color: #fff;
-			padding-right: 3rem;
+    &.active {
+      background: $primary;
+      color: #fff;
+      padding-right: 3rem;
 
-			.material-icons {
-				visibility: visible;
-			}
-		}
+      .material-icons {
+        visibility: visible;
+      }
+    }
 
-		&:hover,
-		&:focus {
-			color: $dark;
-			text-decoration: none;
-			outline: none;
+    &:hover,
+    &:focus {
+      color: $dark;
+      text-decoration: none;
+      outline: none;
 
-			&.active {
-				background: darken($primary, 5%);
-				color: #fff;
-			}
-		}
+      &.active {
+        background: darken($primary, 5%);
+        color: #fff;
+      }
+    }
 
-		&.sorted {
-			padding-left: 3em;
-		}
-	}
+    &.sorted {
+      padding-left: 3em;
+    }
+  }
 
-	.folder-item {
-		padding-left: 5rem;
+  .folder-item {
+    padding-left: 5rem;
 
 		.material-icons {
 			visibility: visible;
@@ -154,7 +154,7 @@ section {
 }
 
 .page-content {
-	max-width: 960px;
+  max-width: 960px;
   height: 100vh;
   overflow-y: auto;
   padding: 2em;
@@ -168,81 +168,81 @@ section {
 }
 
 .page-menu {
-	position: fixed;
-	top: 0;
-	right: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
 
-	.icon-link {
-		padding-top: 1rem;
-		padding-right: .5rem;
-		color: rgba($dark, .5);
-	}
+  .icon-link {
+    padding-top: 1rem;
+    padding-right: .5rem;
+    color: rgba($dark, .5);
+  }
 }
 
 .dropdown-menu {
-	z-index: 8;
+  z-index: 8;
 
-	.icon-link {
-		display: block;
-	}
+  .icon-link {
+    display: block;
+  }
 
-	.dropdown {
-		position: absolute;
-		top: 1rem;
-		right: 1rem;
-		background: #fff;
-		box-shadow: $shadow12dp;
-		padding: .5em 0;
+  .dropdown {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: #fff;
+    box-shadow: $shadow12dp;
+    padding: .5em 0;
 
-		.item {
-			display: flex;
-			align-items: center;
-			justify-content: flex-start;
-			white-space: nowrap;
-			padding: .5em 1em;
-			margin: 0 !important;
-			cursor: pointer;
+    .item {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      white-space: nowrap;
+      padding: .5em 1em;
+      margin: 0 !important;
+      cursor: pointer;
 
-			i.material-icons {
-				color: rgba($dark, .625);
-				font-size: 1.5em;
-				display: inline;
-				margin-right: .5em;
-			}
+      i.material-icons {
+        color: rgba($dark, .625);
+        font-size: 1.5em;
+        display: inline;
+        margin-right: .5em;
+      }
 
-			&:hover,
-			&:focus {
-				background: $light;
+      &:hover,
+      &:focus {
+        background: $light;
 
-				i.material-icons {
-					color: rgba($dark, .75);
-				}
-			}
+        i.material-icons {
+          color: rgba($dark, .75);
+        }
+      }
 
-			&.highlight-red,
-			&.highlight-red i.material-icons {
-				color: $red;
+      &.highlight-red,
+      &.highlight-red i.material-icons {
+        color: $red;
 
-				&:hover,
-				&:focus {
-					color: darken($red, 5%);
-				}
-			}
+        &:hover,
+        &:focus {
+          color: darken($red, 5%);
+        }
+      }
 
-			@extend .icon-link;
-		}
+      @extend .icon-link;
+    }
 
-		hr {
-			border-color: $border;
-		}
-	}
+    hr {
+      border-color: $border;
+    }
+  }
 }
 
 .icon-link {
   line-height: 0;
   color: rgba($dark, .75);
   transition: .2s;
-	text-decoration: none;
+  text-decoration: none;
 
   &:hover,
   &:focus {
@@ -261,245 +261,258 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .modal-container {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 0 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1em;
 
-	z-index: 10;
+  z-index: 10;
 
-	.modal-bg {
-		background: rgba($dark, .5);
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-	}
+  .modal-bg {
+    background: rgba($dark, .5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 
-	.modal {
-		position: relative;
-		background: #fff;
-		max-width: 960px;
-		min-width: 50vw;
-		z-index: 10;
-		box-shadow: $shadow24dp;
-	}
+  .modal {
+    position: relative;
+    background: #fff;
+    max-width: 960px;
+    min-width: 50vw;
+    z-index: 10;
+    box-shadow: $shadow24dp;
+  }
 
-	.modal-body {
-		padding: 2em 2rem;
-		padding-bottom: 0;
-	}
+  .modal-body {
+    padding: 2em 2rem;
+    padding-bottom: 0;
+  }
 
-	footer {
-		padding: 1em 1rem;
-		padding-right: 1rem;
-	}
+  footer {
+    padding: 1em 1rem;
+    padding-right: 1rem;
+  }
 
-	.modal-title {
-		margin-bottom: .5em;
-	}
+  .modal-title {
+    margin-bottom: .5em;
+  }
 }
 
 .actions-container {
-	display: flex;
-	justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 
-	.float-left {
-		margin-right: auto;
-	}
+  .float-left {
+    margin-right: auto;
+  }
 
-	.button {
-		display: flex !important;
-		align-items: center;
+  .button {
+    display: flex !important;
+    align-items: center;
 
-		i.material-icons {
-			font-size: 1.5em;
-			line-height: 1;
-			display: inline;
-			margin-left: .5em;
+    i.material-icons {
+      font-size: 1.5em;
+      line-height: 1;
+      display: inline;
+      margin-left: .5em;
 
-			&.icon-left {
-				margin-left: 0;
-				margin-right: .5em;
-			}
-		}
-	}
+      &.icon-left {
+        margin-left: 0;
+        margin-right: .5em;
+      }
+    }
+  }
 }
 
 .button {
-	font-weight: 500;
-	border: none;
-	border-radius: 0;
-	padding: .75em 1.75em !important;
-	transition: .2s ease;
+  font-weight: 500;
+  border: none;
+  border-radius: 0;
+  padding: .75em 1.75em !important;
+  transition: .2s ease;
 }
 
 .cta-button {
-	background: $primary;
-	color: #fff !important;
+  background: $primary;
+  color: #fff !important;
 
-	&:hover,
-	&:focus {
-		background: darken($primary, 5%);
-	}
+  &:hover,
+  &:focus {
+    background: darken($primary, 5%);
+  }
 }
 
 .ghost-button {
-	color: $primary !important;
+  color: $primary !important;
 
-	&:hover,
-	&:focus {
-		background: rgba($dark, .05);
-	}
+  &:hover,
+  &:focus {
+    background: rgba($dark, .05);
+  }
 }
 
 .danger-button {
-	color: $red !important;
+  color: $red !important;
 
-	&:hover,
-	&:focus {
-		background: rgba($dark, .05);
-	}
+  &:hover,
+  &:focus {
+    background: rgba($dark, .05);
+  }
 }
 
 .button-block {
-	display: block !important;
-	width: 100%;
-	max-width: 320px;
-	margin: auto;
+  display: block !important;
+  width: 100%;
+  max-width: 320px;
+  margin: auto;
 }
 
 .custom-input {
-	width: 100%;
-	font-size: 1rem !important;
-	background: transparent;
-	border: none !important;
-	border-radius: 0 !important;
-	border-bottom: 3px solid rgba($dark, .5) !important;
-	padding: .5em 0 !important;
-	transition: .2s ease;
+  width: 100%;
+  font-size: 1rem !important;
+  background: transparent;
+  border: none !important;
+  border-radius: 0 !important;
+  border-bottom: 3px solid rgba($dark, .5) !important;
+  padding: .5em 0 !important;
+  transition: .2s ease;
 
-	&:hover {
-		border-bottom-color: rgba($dark, .75) !important;
-	}
+  &:hover {
+    border-bottom-color: rgba($dark, .75) !important;
+  }
 
-	&:active,
-	&:focus {
-		border-bottom-color: $primary !important;
-		box-shadow: none !important;
-	}
+  &:active,
+  &:focus {
+    border-bottom-color: $primary !important;
+    box-shadow: none !important;
+  }
 }
 
 .floating-label {
-	position: relative;
-	display: block;
+  position: relative;
+  display: block;
 
-	input {
-		padding-top: 1.15rem !important;
+  input {
+    padding-top: 1.15rem !important;
 
-		&::placeholder {
-			opacity: 1;
-			transition: .2s ease;
-		}
+    &::placeholder {
+      opacity: 1;
+      transition: .2s ease;
+    }
 
-		&:placeholder-shown:not(:focus)::placeholder {
-			opacity: 0;
-		}
+    &:placeholder-shown:not(:focus)::placeholder {
+      opacity: 0;
+    }
 
-		&:placeholder-shown:not(:focus) + label {
-			color: rgba($dark, .5);
-			font-size: 1rem;
-			top: 1.15em;
-		}
-	}
+    &:placeholder-shown:not(:focus) + label {
+      color: rgba($dark, .5);
+      font-size: 1rem;
+      top: 1.15em;
+    }
+  }
 
-	label {
-		position: absolute;
-		left: 0;
-		top: 0;
-		cursor: text;
-		font-size: .75em;
-		color: $primary;
-		margin: 0;
-		pointer-events: none;
-		transition: .2s ease;
-	}
+  label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    cursor: text;
+    font-size: .75em;
+    color: $primary;
+    margin: 0;
+    pointer-events: none;
+    transition: .2s ease;
+  }
 }
 
 .link {
-	color: $primary;
+  color: $primary;
 
-	&:hover,
-	&:focus {
-		color: darken($primary, 5%);
-	}
+  &:hover,
+  &:focus {
+    color: darken($primary, 5%);
+  }
 }
 
 .files-list {
-	border-bottom: 1px solid $border;
+  border-bottom: 1px solid $border;
 
-	.list-item {
-		display: flex;
-		color: rgba($dark, .75);
-		font-weight: 500;
-		text-decoration: none;
-		transition: .2s ease;
-		padding: .5em;
+  .list-item {
+    display: flex;
+    color: rgba($dark, .75);
+    font-weight: 500;
+    text-decoration: none;
+    transition: .2s ease;
+    padding: .5em;
 
-		p {
-			display: inline-block;
-			margin: 0;
-		}
+    p {
+      display: inline-block;
+      margin: 0;
+    }
 
-		i.material-icons {
-			color: rgba($dark, .625);
-			font-size: 1.5em;
-			margin-right: .5em;
+    i.material-icons {
+      color: rgba($dark, .625);
+      font-size: 1.5em;
+      margin-right: .5em;
 
-			&.float-right {
-				margin-left: auto;
-				margin-right: 0;
-			}
-		}
+      &.float-right {
+        margin-left: auto;
+        margin-right: 0;
+      }
+    }
 
-		&:hover,
-		&:focus {
-			background: $light;
-			color: $dark;
+    &:hover,
+    &:focus {
+      background: $light;
+      color: $dark;
 
-			i.material-icons {
-				color: rgba($dark, .75);
-			}
-		}
-	}
+      i.material-icons {
+        color: rgba($dark, .75);
+      }
+    }
+  }
 }
 
 .login-container {
-	display: flex;
-	flex-direction: column;
-	padding-bottom: 6em;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 6em;
 
-	.container-sm {
-		width: 100%;
-	}
+  .container-sm {
+    width: 100%;
+  }
 
-	.login-heading {
-		margin: 4em auto 0;
-	}
+  .login-heading {
+    margin: 4em auto 0;
+  }
 
-	h1 {
-		margin: 0;
-	}
+  h1 {
+    margin: 0;
+  }
 }
 
 // deprecated
 .mb-right {
-	margin-right: 1em;
+  margin-right: 1em;
+}
+
+@media print {
+  .page-sidebar,
+  .page-editor,
+  .page-menu {
+    display: none;
+  }
+
+  html, body,
+  .page-content {
+    overflow: visible;
+  }
 }
